@@ -2,6 +2,8 @@ package com.example.courses.servlet.teacher;
 
 import com.example.courses.persistence.entity.StudentCourse;
 import com.example.courses.service.StudentCourseService;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import javax.servlet.ServletException;
 import javax.servlet.annotation.WebServlet;
@@ -16,26 +18,35 @@ import java.util.List;
 public class ScoresServlet extends HttpServlet {
     private static final StudentCourseService studentCourseService = new StudentCourseService();
 
+    private static final Logger logger = LogManager.getLogger(ScoresServlet.class.getName());
+
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+        logger.trace("Save students scores: post");
         String courseId = request.getParameter("course_id");
 
         if(courseId != null) {
+            logger.debug("Course id: " + courseId);
+
             try {
                 long id = Long.parseLong(courseId);
                 List<StudentCourse> studentCourseList = studentCourseService.getStudentsByCourseId(id);
 
                 for (StudentCourse studentCourse : studentCourseList) {
                     String studentScore = request.getParameter("score_" + studentCourse.getStudentId());
-
-                    if (studentScore != null && !studentScore.trim().isEmpty()) {
+                    if (studentScore != null && !studentScore.isBlank()) {
                         studentCourse.setScore(Integer.parseInt(studentScore));
                     }
                 }
-
-                studentCourseService.updateStudentCourse(studentCourseList);
+                studentCourseService.updateStudentCourses(studentCourseList);
             } catch (SQLException e) {
-                e.printStackTrace();
+                logger.error("SQLException while updating scores", e);
+                response.sendRedirect(request.getContextPath() + "/error_handler?type=500");
+                return;
+            } catch (NumberFormatException e) {
+                logger.error("Invalid course id: " + courseId, e);
+                response.sendRedirect(request.getContextPath() + "/error_handler?type=404");
+                return;
             }
             response.sendRedirect(request.getContextPath() + "/course?course_id=" + courseId);
         } else {
